# kepler

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: generate-manifest.js
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: divert.rs  lib.rs  main.rs  nat.rs  pid_lookup.rs  process_list.rs  proxy.rs  socks5.rs  state.rs  tunnel.rs
