[package]
name = "kepler"
version = "0.1.2"
edition = "2021"
description = "Per-application TCP+UDP network tunnel via WinDivert"

[lib]
name = "kepler_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ── Tauri framework ──────────────────────────────────────────────
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# ── Serialization (Tauri IPC) ───────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Process enumeration ─────────────────────────────────────────
sysinfo = "0.33"

# ── Async runtime (proxy listener, UDP relay, timers) ───────────
tokio = { version = "1", features = ["full"] }

# ── Concurrent data structures ──────────────────────────────────
dashmap = "6"
parking_lot = "0.12"

# ── Structured logging ──────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-icons = "0.2.1"
socket2 = "0.5"



[profile.release]
strip = true
lto = true
codegen-units = 1
